--- a/carts.html
+++ b/carts.html
@@ -46,7 +46,7 @@
             <div class="card mb-3" style="max-width: 640px;">
                 <div class="row g-0 ">
                   <div class="col-md-4">
-                    <img src="./assets/images/Salida al museo5.jpg" class="img-fluid rounded-start h-100" alt="...">
+                    <img src="./assets/images/Salida.jpg" class="img-fluid rounded-start h-100" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
