--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
+          <img src="./assets/images/Concierto.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-md-block">
             <h1 class="pb-4">Contact us</h1>
           </div>
@@ -91,7 +91,7 @@
         </div>
         <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label">Message:
-            <input class="form-control caja" id="exampleFormControlTextarea1" rows="3">
+            <input class="form-control caja" id="exampleFormControlTextarea1">
           </label>
         </div>
       </div>
