--- a/index.html
+++ b/index.html
@@ -17,31 +17,33 @@
         <nav class="navbar navbar-expand-md bg-secondary">
             <div class="container-fluid">
                 <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item">
-                        <a class="btn boton me-4" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn boton me-4" href="./past.html">Past Events</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn boton me-4" href="./contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn boton me-4" href="./stats.html">Stats</a>
-                    </li>
-                </ul>
-              </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="btn boton me-4" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn boton me-4" href="./past.html">Past Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn boton me-4" href="./contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn boton me-4" href="./stats.html">Stats</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <main class="bg-danger-subtle">
         <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
@@ -59,7 +61,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/images/Concierto.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
                         <h1 class="pb-4">Home</h1>
                     </div>
@@ -79,24 +81,29 @@
         <div class="d-flex align-items-center justify-content-between pt-4 ">
             <div>
                 <div class="form-check form-check-inline ms-2 ">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="option1">
+                        Food Fair</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Museum</label>
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="option2">
+                        Museum</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Costume Party</label>
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="option3">
+                        Costume Party</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Music Concert</label>
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="option4">
+                        Music Concert</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Others</label>
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="option5">
+                        Others</label>
                 </div>
             </div>
             <form class="d-flex me-3" role="search">
@@ -106,7 +113,7 @@
         </div>
         <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2">
             <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Feria de comidas7.jpg" class="card-img-top " alt="...">
+                <img src="./assets/images/Feria.jpg" class="card-img-top " alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Festival of the collectivities</h5>
                     <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the
@@ -119,7 +126,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Salida al museo5.jpg" class="card-img-top" alt="...">
+                <img src="./assets/images/Salida.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Jurassic Park</h5>
                     <p class="card-text">Let's go to the paleontology museum for an incredible tour to learn about the
@@ -131,7 +138,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Fiesta de disfraces1.jpg" class="card-img-top" alt="...">
+                <img src="./assets/images/Fiesta.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Halloween Night</h5>
                     <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
@@ -142,7 +149,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Concierto de musica1.jpg" class="card-img-top" alt="...">
+                <img src="./assets/images/Concierto.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Metallica in concert</h5>
                     <p class="card-text pb-2">The only concert of the most emblematic band in the world</p>
@@ -156,7 +163,8 @@
 
         </div>
     </main>
-    <footer class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
+    <footer
+        class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
 
         <img src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
             alt="" id="iconos" class="pt-2 ps-5">
