--- a/past.html
+++ b/past.html
@@ -15,34 +15,35 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-md bg-secondary">
-        <div class="container-fluid">
-            <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                <li class="nav-item">
-                    <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="#">Past Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="./stats.html">Stats</a>
-                </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+            <li class="nav-item">
+              <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="#">Past Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./stats.html">Stats</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-</header>
+      </div>
+    </nav>
+  </header>
   <main class="bg-danger-subtle">
     <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark ">
       <div class="carousel-inner">
@@ -59,7 +60,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
+          <img src="./assets/images/Concierto.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-md-block">
             <h1 class="pb-4">Past Events</h1>
           </div>
@@ -78,80 +79,86 @@
     </div>
     <div class="d-flex align-items-center justify-content-between pt-4 ">
       <div>
-          <div class="form-check form-check-inline ms-2 ">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-              <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
-          </div>
-          <div class="form-check form-check-inline ms-2">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-              <label class="form-check-label" for="inlineCheckbox1">Museum</label>
-          </div>
-          <div class="form-check form-check-inline ms-2">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-              <label class="form-check-label" for="inlineCheckbox1">Costume Party</label>
-          </div>
-          <div class="form-check form-check-inline ms-2">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-              <label class="form-check-label" for="inlineCheckbox1">Music Concert</label>
-          </div>
-          <div class="form-check form-check-inline ms-2">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-              <label class="form-check-label" for="inlineCheckbox1">Others</label>
-          </div>
+        <div class="form-check form-check-inline ms-2 ">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="option1">
+            Food Fair</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="option2">
+            Museum</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="option3">
+            Costume Party</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="option4">
+            Music Concert</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <label class="form-check-label">
+            <input class="form-check-input" type="checkbox" value="option5">
+            Others</label>
+        </div>
       </div>
       <form class="d-flex me-3" role="search">
-          <input class="form-check-inline me-2" type="search" placeholder="Search" aria-label="Search">
-          <button type="button" class="btn btn-dark">Search</button>
+        <input class="form-check-inline me-2" type="search" placeholder="Search" aria-label="Search">
+        <button type="button" class="btn btn-dark">Search</button>
       </form>
-  </div>
+    </div>
     <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/Maraton3.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">10K for life</h5>
-            <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
-            <div class="d-flex justify-content-between mt-5 align-items-center ">
-              <p>Prize: $3 USD</p>
-              <a href="./carts.html" class="btn btn-primary">See More</a>
-            </div>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/books.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">School Book Fair</h5>
-            <p class="card-text">Bring your unused school book and bring the one you need.</p>
-            <div class="d-flex justify-content-between mt-5 align-items-center ">
-              <p>Prize: $1 USD</p>
-              <a href="./carts.html" class="btn btn-primary">See More</a>
-            </div>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/Cine7.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Avengers</h5>
-            <p class="card-text pb-3">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.</p>
-            <div class="d-flex justify-content-between mt-5 pt-4 align-items-center ">
-              <p>Prize: $250 USD</p>
-              <a href="./carts.html" class="btn btn-primary">See More</a>
-            </div>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/Feria de comidas7.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Festival of the collectivities</h5>
-            <p class="card-text pb-3">Enjoy your favorite dishes from different countries in a unique event for the
-              whole family.</p>
-            <div class="d-flex justify-content-between mt-4 align-items-center ">
-              <p>Prize: $5 USD</p>
-              <a href="./carts.html" class="btn btn-primary">See More</a>
-            </div>
-  
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/Maraton3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">10K for life</h5>
+          <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+          <div class="d-flex justify-content-between mt-5 align-items-center ">
+            <p>Prize: $3 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
           </div>
         </div>
       </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/books.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">School Book Fair</h5>
+          <p class="card-text">Bring your unused school book and bring the one you need.</p>
+          <div class="d-flex justify-content-between mt-5 align-items-center ">
+            <p>Prize: $1 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/Cine7.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Avengers</h5>
+          <p class="card-text pb-3">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.
+          </p>
+          <div class="d-flex justify-content-between mt-5 pt-4 align-items-center ">
+            <p>Prize: $250 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/Feria.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Festival of the collectivities</h5>
+          <p class="card-text pb-3">Enjoy your favorite dishes from different countries in a unique event for the
+            whole family.</p>
+          <div class="d-flex justify-content-between mt-4 align-items-center ">
+            <p>Prize: $5 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
 
