--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Amazing Events | HOME</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 </head>
 
@@ -45,7 +45,7 @@
             </div>
         </nav>
     </header>
-    <main class="bg-danger-subtle">
+    <main class="bg-danger-subtle" >
         <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -121,57 +121,11 @@
                 <button type="button" class="btn btn-dark">Search</button>
             </form>
         </div>
-        <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2">
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Feria.jpg" class="card-img-top " alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Festival of the collectivities</h5>
-                    <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the
-                        whole family.</p>
-                    <div class="d-flex justify-content-between mt-5 align-items-center ">
-                        <p>Prize: $5 USD</p>
-                        <a href="./carts.html" class="btn btn-primary">See More</a>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Salida.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Jurassic Park</h5>
-                    <p class="card-text">Let's go to the paleontology museum for an incredible tour to learn about the
-                        largest dinosaurs.</p>
-                    <div class="d-flex justify-content-between mt-4 align-items-center">
-                        <p>Prize: $15 USD </p>
-                        <a href="./carts.html" class="btn btn-primary">See More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Fiesta.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Halloween Night</h5>
-                    <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
-                    <div class="d-flex justify-content-between mt-5 pt-3 align-items-center">
-                        <p>Prize: $12 USD</p>
-                        <a href="./carts.html" class="btn btn-primary">See More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Concierto.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Metallica in concert</h5>
-                    <p class="card-text pb-2">The only concert of the most emblematic band in the world</p>
-                    <div class="d-flex justify-content-between mt-5 pt-4 align-items-center">
-                        <p>Prize: $150 USD</p>
-                        <a href="./carts.html" class="btn btn-primary">See More</a>
-                    </div>
-                </div>
-            </div>
-
-
+        <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2" id="main">
+          
         </div>
+        <script src="./assets/js/data.js"></script>
+        <script src="./assets/js/index.js"></script>
     </main>
     <footer
         class="d-flex border-2 border-top border-dark bg-white text-black  justify-content-center align-items-center flex-wrap">
