--- a/upcoming.html
+++ b/upcoming.html
@@ -8,7 +8,7 @@
   <title>Amazing Events | UPCOMING EVENTS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./assets/styles/style.css">
   <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 </head>
 
@@ -120,54 +120,8 @@
           <button type="button" class="btn btn-dark">Search</button>
       </form>
   </div>
-    <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2">
-      <div class="card" style="width: 18rem;">
-        <img src="./assets/images/Maraton3.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">10K for life</h5>
-          <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
-          <div class="d-flex justify-content-between mt-5 align-items-center ">
-            <p>Prize: $3 USD</p>
-            <a href="./carts.html" class="btn btn-primary">See More</a>
-          </div>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="./assets/images/books.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">School Book Fair</h5>
-          <p class="card-text">Bring your unused school book and bring the one you need.</p>
-          <div class="d-flex justify-content-between mt-5 align-items-center ">
-            <p>Prize: $1 USD</p>
-            <a href="./carts.html" class="btn btn-primary">See More</a>
-          </div>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="./assets/images/Cine7.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Avengers</h5>
-          <p class="card-text pb-3">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.
-          </p>
-          <div class="d-flex justify-content-between mt-5 pt-4 align-items-center ">
-            <p>Prize: $250 USD</p>
-            <a href="./carts.html" class="btn btn-primary">See More</a>
-          </div>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="./assets/images/Feria.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Festival of the collectivities</h5>
-          <p class="card-text pb-3">Enjoy your favorite dishes from different countries in a unique event for the
-            whole family.</p>
-          <div class="d-flex justify-content-between mt-4 align-items-center ">
-            <p>Prize: $5 USD</p>
-            <a href="./carts.html" class="btn btn-primary">See More</a>
-          </div>
-
-        </div>
-      </div>
+    <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2" id="main">
+      
     </div>
   </main>
   <footer
@@ -176,8 +130,8 @@
         <img src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
             alt="" id="iconos">
     </footer>
-
-
+    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/upcoming.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
