--- a/carts.html
+++ b/carts.html
@@ -44,31 +44,9 @@
       </div>
     </nav>
   </header>
-  <main class="bg-danger-subtle d-flex justify-content-center">
-
-    <div class="d-flex justify-content-center align-items-center pt-5">
-      <div class="card mb-3" style="max-width: 640px;">
-        <div class="row g-0 ">
-          <div class="col-md-4">
-            <img src="./assets/images/Salida.jpg" class="img-fluid rounded-start h-100" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Name: Jurassic Park</h5>
-              <h5 class="card-text">Date: 2021-11-02</h5>
-              <h5 class="card-text">Description: Let's go to the paleontology museum for an incredible tour to learn
-                about the largest dinosaurs.</h5>
-              <h5 class="card-text">Category: Museum</h5>
-              <h5 class="card-text">Place: Field</h5>
-              <h5 class="card-text">Capacity: 82.000</h5>
-              <h5 class="card-text">Assistance: 65.892</h5>
-              <h5 class="card-text">Prize: $15USD</h5>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <main class="bg-danger-subtle d-flex justify-content-center" id="main">
+  
+    
 
   </main>
   <footer
@@ -78,7 +56,8 @@
       src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
       alt="" id="iconos">
   </footer>
-
+<script src="./assets/js/data.js"></script>
+<script src="./assets/js/details.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
