--- a/past.html
+++ b/past.html
@@ -78,51 +78,50 @@
       </button>
     </div>
     <div class="d-flex align-items-center justify-content-center pt-4 flex-wrap gap-3">
-      <div class="d-flex gap-3 flex-wrap cajas">
-          <div class="form-check form-check-inline ms-2 ">
-              <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value="option1">
-                  Food Fair</label>
-          </div>
-          <div class="form-check form-check-inline ms-2 ">
-              <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value="option2">
-                  Museum</label>
-          </div>
-          <div class="form-check form-check-inline ms-2 ">
-              <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value="option3">
-                  Costume Party</label>
-          </div>
-          <div class="form-check form-check-inline ms-2 ">
-              <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value="option4">
-                  Music Concert</label>
-          </div>
-          <div class="form-check form-check-inline ms-2 ">
-              <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value="option5">
-                  Race</label>
-          </div>
-          <div class="form-check form-check-inline ms-2 ">
-              <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value="option5">
-                  Book Exchange</label>
-          </div>
-          <div class="form-check form-check-inline ms-2 ">
-              <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" value="option5">
-                  Let's go to the cinema</label>
-          </div>
-      </div>
-      <form class="d-flex me-3 justify-content-center" role="search">
-          <input class="form-check-inline me-2 buscar" type="search" placeholder="Search" aria-label="Search">
-          <button type="button" class="btn btn-dark">Search</button>
-      </form>
-  </div>
-  <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2" id="main">
-        
-  </div>
+      <div class="d-flex gap-3 flex-wrap cajas" id="cajacheck">
+        <div class="form-check form-check-inline ms-2 ">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" value="Food Fair">
+                Food</label>
+        </div>
+        <div class="form-check form-check-inline ms-2 ">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" value="Museum">
+                Museum</label>
+        </div>
+        <div class="form-check form-check-inline ms-2 ">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" value="Costume Party">
+                Party</label>
+        </div>
+        <div class="form-check form-check-inline ms-2 ">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" value="Music Concert">
+                Concert</label>
+        </div>
+        <div class="form-check form-check-inline ms-2 ">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" value="Race">
+                Race</label>
+        </div>
+        <div class="form-check form-check-inline ms-2 ">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" value="Book Exchange">
+                Books</label>
+        </div>
+        <div class="form-check form-check-inline ms-2 ">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" value="Cinema">
+            Cinema</label>
+        </div>
+    </div>
+    <form class="d-flex me-3 justify-content-center" role="search" >
+        <input class="form-check-inline me-2 buscar" type="search" placeholder="Search" aria-label="Search" id="buscador">
+    </form>
+    </div>
+    <div class="d-flex mt-5 justify-content-evenly pb-5 flex-wrap gap-3 mx-2" id="main">
+
+    </div>
   </main>
   <footer
     class="d-flex border-2 border-top border-dark bg-white text-black  justify-content-center align-items-center flex-wrap">
@@ -133,7 +132,7 @@
   </footer>
   <script src="./assets/js/data.js"></script>
   <script src="./assets/js/past.js"></script>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
