--- a/stats.html
+++ b/stats.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
     <main>
-        
+
         <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -81,49 +81,48 @@
         </div>
 
         <div class="d-flex flex-column justify-content-center align-items-center pt-5 pb-3">
-            <table class="table table-bordered border-dark-subtle bg-body-secondary">
+            <table class="table table-bordered border-dark-subtle bg-body-secondary" id="table1">
+                <caption>Events statistics</caption>
                 <thead class="bg-dark-subtle">
                     <tr>
-                        <th colspan="3">Events statistics</th>
+                        <th>Events with the highest percentage of attendance</th>
+                        <th>Events with the lowesrt percentage of attendance</th>
+                        <th>Event with larger capacity</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Events with the highest percentage of attendance</td>
-                        <td>Events with the lowesrt percentage of attendance</td>
-                        <td>Event with larger capacity</td>
+                        <td id="masAsistencia"></td>
+                        <td id="menosAsistencia"></td>
+                        <td id="masCapacidad"></td>
                     </tr>
                 </tbody>
             </table>
-            <table  class="table table-bordered border-dark-subtle bg-body-secondary">
-                <thead class="bg-dark-subtle">
-                    <tr>
-                        <th colspan="3">Upcoming events statistics by category</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of attendance</td>
-                    </tr>
-                </tbody>
-            </table>
-            <table  class="table table-bordered border-dark-subtle bg-body-secondary">
-                <thead class="bg-dark-subtle">
-                <tr>
-                    <th colspan="3">Past events statistics by category</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Categories</td>
-                    <td>Revenues</td>
-                    <td>Percentage of attendance</td>
-                </tr>
 
-            </tbody>
-            </table>    
+            <table class="table table-bordered border-dark-subtle bg-body-secondary">
+                <caption>Upcoming events statistics by category</caption>
+                <thead class="bg-dark-subtle">
+                    <tr>
+                        <th>Categories</th>
+                        <th>Revenues</th>
+                        <th>Percentage of attendance</th>
+                    </tr>
+                </thead>
+                <tbody id="table2">
+                </tbody>
+            </table>
+            <table class="table table-bordered border-dark-subtle bg-body-secondary" >
+                <caption>Past events statistics by category</caption>
+                <thead class="bg-dark-subtle">
+                    <tr>
+                        <th>Categories</th>
+                        <th>Revenues</th>
+                        <th>Percentage of attendance</th>
+                    </tr>
+                </thead>
+                <tbody id="table3">
+                </tbody>
+            </table>
         </div>
 
     </main>
